--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section class="section1">
             <div class="container">
                 <div class="section1div">
-                    <div class="section1div1"><img class="section1div1img" src="/images/chears image.jpg" alt=""></div>
+                    <div class="section1div1"><img class="section1div1img" src="images/chears image.jpg" alt=""></div>
                     <div class="section1div2"><img class="section1div2img" src="/images/fortyfive footr image.png" alt=""></div>
                     <div class="section1div3">
                         <p class="section1div3p1">... Die Welt gehört dem, der sie genießt ...</p>
